<resources>
    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>
    <string name="app_name">BuyMeSth</string>
    <string name="hint_nickname">昵称</string>
    <string name="hint_account">Email地址</string>
    <string name="hint_password">密码</string>
    <string name="hint_password_confirm">确认密码</string>
    <string name="forgot_password"><u>忘记密码 ？</u></string>
    <string name="button_login">登陆</string>
    <string name="button_register">注册</string>
    <string name="button_cancel">取消</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <string name="gender_secret">秘密</string>

    <string name="action_login_succeed">登陆成功</string>
    <string name="action_login_failed">登录失败</string>
    <string name="action_register_succeed">注册成功</string>
    <string name="action_register_failed">注册失败</string>

    <string name="error_input_too_short">太短</string>
    <string name="error_input_too_long">太长</string>
    <string name="error_input_incorrect">输入有误</string>
    <string name="abcdefadsfdkhvkljxzhvkljafhkvjkzhaiofweopaifhvndsklowpihvblkjdszvnoiwhafvadsmhfoqieafhvbdsjzcxmoqiwlfadsnmvkjzvmsdlfknoiasfdhklsdzkvj">long_text</string>
    <string name="text_share_request">分享请求</string>

    <string name="text_delete">删除</string>

    <string name="text_follow">+关注</string>
    <string name="text_followed">已关注</string>

    <string name="text_collect">收藏</string>
    <string name="text_collected">已收藏</string>
    <string name="title_activity_settings">设置</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
